# kalliste

./: .env  .gitignore  CLAUDE.md  QUICKSTART.md  TODO.md  docker-compose-safe.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start.sh
chromadb/: init_chroma.py
clipcrop/: cc1.py  cc2.py  cc3.py  cc4.py  cc5.py  cc6.py  cc7.py  cc8.py  cc9.py  describeimage.py  diag.py  diag2.py  diag3.py  test.py
config/exiftool/: kalliste.config
db/: 01_build_table.sql
docs/: CLAUDE_README.md  FUTURE_DIRECTIONS.md  MODEL_WEIGHTS.md  THIS_EXPLAINS_EVERYTHING.md  architecture.md  kalliste_processing_sequence.md  metadata_handling.md  schema_ideas.md
docs/20241220_inital_diagrams/: code_structure.md  processing_flow.md  processing_flow_2.md  processing_simplified.md  session_notes.md  workflow.md
docs/archive/: CURRENT_STATUS.md  kalliste_image_processing_arch.md  kalliste_image_processing_flow.md  kalliste_processing_sequence.md
kalliste/: __init__.py  cli.py  config.py  default_detection_config.yaml  example_default_detection_config.yaml  image_detection_config.yaml  test_crop.py  test_detect.py  types.py  utils.py
kalliste.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kalliste/batch/: batch.py  batch_processor.py  batch_results_writer.py  batch_statistics.py
kalliste/chromadb/: chroma_image_store.py
kalliste/db/: __init__.py  chroma_db.py  embedding_generator.py  kalliste_db.py  milvus_db.py
kalliste/detectors/: __init__.py  base.py  detection_pipeline.py  region_expansion_bak.txt  unicorn_detector.py  yolo_classes.py  yolo_detector.py  yolo_face_detector.py
kalliste/image/: __init__.py  batch.py  batch_processor.py  caption_file_writer.py  cropped_image.py  exif_writer.py  exiftool.py  model_registry.py  original_image.py  types.py  utils.py
kalliste/model/: model_download_manager.py  model_registry.py
kalliste/models/: __init__.py  exported_image.py
kalliste/processors/: __init__.py  crop_processor.py  detection_pipeline.py  detection_pipeline_bak.py  image_resizer.py  metadata_processor.py  region_processor.py  taggers.py  test_taggers.py
kalliste/region/: __init__.py  region.py  region_downsizer.py  region_expander.py  region_matcher.py
kalliste/scripts/: __init__.py  pipeline.py
kalliste/tag/: __init__.py  kalliste_tag.py
kalliste/taggers/: AbstractTagger.py  NIMA_tagger.py  __init__.py  base_tagger.py  caption_tagger.py  config.py  orientation_tagger.py  tagger_pipeline.py  wd14_tagger.py
kalliste/utils/: debug_vit_loading.py  metadata.py  trace_imports.py
kalliste_db/: drop.sql  init_db.py  schema.sql
milvus_setup/: README.md  create_initial_schema.py
notebooks/: pipeline_setup.py  pipeline_setup_test.py
scripts/: analyze_character_data.py  analyze_milvus_content.py  cleanup_kalliste_rejects.py  cleanup_rejected_images.py  count_assessments.py  count_kalliste_logic.py  create_character_dataset.py  create_character_dataset_v2.py  diagnose_assessments.py  ingest_chroma.py  init_chromadb.py  init_db.py  init_source2.py  init_source_images_table.py  pixeltable_test.py  select_diverse_training_sets.py  select_milvus_images.py  select_training_images.py  test_chroma.py  test_chroma_query.py  test_pipeline.py  update_person_names.py
tests/: 01_test_dng.py  02_test_dng.py  03_test_dng.py  04_test_dng_metadata.py  05_test_get_metadata.py  06_test_exiftool_dump.py  07_test_pxltable_get.py  08_test_pixeltable_get.py  09_exiftool.py
