[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalliste"
version = "0.2.0"
description = "Image tagging, cropping, and preparation tool for Stable Diffusion training"
readme = "docs/CLAUDE_README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Rob Kunkle" },
]
keywords = ["machine-learning", "computer-vision", "stable-diffusion", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "ultralytics>=8.3.51",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "piexif>=1.1.3",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tensorflow>=2.15.0",
    "tensorflow-metal>=1.1.0; sys_platform=='darwin' and platform_machine=='arm64'",
    "chromadb>=0.4.0",
    "timm>=0.9.0",
    "rich>=13.0.0",
    "pymilvus>=2.3.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "huggingface-hub>=0.16.0",
    "pandas>=2.0.0",
    "open-clip-torch>=2.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
kalliste = "kalliste.cli:main"
kalliste-pipeline = "kalliste.scripts.pipeline:main"

[project.urls]
Homepage = "https://github.com/robkunkle/kalliste"
Repository = "https://github.com/robkunkle/kalliste"
Documentation = "https://github.com/robkunkle/kalliste/docs"

[tool.hatch.build.targets.wheel]
packages = ["kalliste"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
